--- a/godaddy/home.html
+++ b/godaddy/home.html
@@ -39,13 +39,19 @@
             transform-origin: top; /* Scale from the top */
             background-color: rgba(255, 255, 255, 0.3); /* Adjust for desired transparency level */
         }
+        #link { color: #996633; }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>Ask EManual</h1>
-        <p>Hello, I am EManual. I remember all your household manuals in all languages</p>
+        <h1>Ask emanual</h1>
+        <p>Hello, I am emanual. I remember all your household manuals in all languages</p>
+        <p>
+            <a id="link" href="https://admin.owners.infinitiusa.com/content/manualsandguides/IPL_G_Coupe/2011/2011-Infiniti-IPL-G-Coupe.pdf">Infiniti G37 Coupe</a>  |  
+            <a id="link" href="https://www.ecm.de/fileadmin/manual/BA-Classika_PID-2023-08-web.pdf">CLASSIKA PID Espresso machine</a>  |  
+            <a id="link" href="https://image-us.samsung.com/SamsungUS/tv-ci-resources/2018-user-manuals/2018_UserManual_Q9FNSeries.pdf">Samsung QLED TV</a>
+        </p>
     </div>
     <iframe src="https://nsabina--emanual-backend.modal.run/gradio/" allowfullscreen></iframe>
 
